Fixed roster spacing, added none field to roster view

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -924,7 +924,7 @@ a {
 .rosterHeader {
   padding-top: 40px;
   padding-bottom: 20px;
-  margin-left: 4%;
+  margin-left: 30px;
 }
 
 .participantHeader {
